# secure-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TOOLCHAIN.md  package-lock.json  package.json  tsconfig.json
android/: .gitignore  build.gradle.kts  gradlew  settings.gradle.kts
docs/: android-keystore-policy.md  android-storage-policy.md  api-overview.md  auth-policy.md  beta-process.md  build-android.md  build-ios.md  compat-promises.md  compatibility.md  data-lifecycle.md  enc-format-v1.md  faq.md  ffi-abi-v1.md  ffi-api.md  hardening-results-v1.md  hotfix-process.md  import-limits-v1.md  ios-beta-process.md  ios-database.md  ios-hardening-results.md  ios-keychain-policy.md  ios-monitoring.md  ios-preview-policy.md  ios-release-checklist.md  ios-storage-policy.md  monitoring-v1.md  platform-contract.md  preview-security-policy.md  privacy-policy.md  recovery-format-v1.md  recovery-ux-guide.md  release-checklist-v1.md  release-signing.md  rn-api-contract.md  rn-cross-platform.md  rn-module-setup.md  security-audit-v1.md  security-considerations.md  smoke-test-ios.md  store-listing.md  (+3 more)
ffi-harness/: Cargo.toml
include/: secure_core.h
secure-core/: Cargo.toml  clippy.toml
secure-core/benches/: crypto_bench.rs
secure-core/src/: api.rs  crypto.rs  error.rs  format.rs  jni_bridge.rs  lib.rs  logging.rs  metadata.rs  recovery.rs  streaming.rs  validation.rs
secure-core/src/ffi/: functions.rs  types.rs
secure-core/tests/: api_tests.rs  compat_tests.rs  crypto_tests.rs  ffi_tests.rs  generate_compat_pack.rs  generate_reference.rs  metadata_folders.rs  metadata_tests.rs  recovery_tests.rs  streaming_tests.rs  validation_tests.rs
(+120 files in other folders)
