[package]
name = "secure-core"
version = "0.1.0"
edition = "2021"
description = "Core cryptographic primitives and secure building blocks"
license = "Apache-2.0"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[features]
_test-vectors = []
