[package]
name = "secure-core"
version = "0.1.0"
edition = "2021"
description = "Core cryptographic primitives and secure building blocks"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
jni = { version = "0.21", optional = true }
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
sha2 = "0.10"
tempfile = "3"

[[bench]]
name = "crypto_bench"
harness = false

[features]
_test-vectors = []
jni = ["dep:jni"]
log = ["dep:log"]

[dependencies.log]
version = "0.4"
optional = true
